feat:fine sezione partner

--- a/index.html
+++ b/index.html
@@ -34,19 +34,57 @@
         <!-- SECOND SECTION -->
         <section class="section-2">
             <div class="small-container">
-                <h2 class="titolo-due">Trova il piano business che fa per te</h2>
-                <div class="card">
-                    <div>imput</div>
-                    <div>team</div>
-                    <div>azienda</div>
+                <div>
+                    <h2>Trova il piano</h2>
+                </div>
+                <div class="row">
+                    <div class="col-33">ciao</div>
+                    <div class="col-33">ciao</div>
+                    <div class="col-33">ciao</div>
+                </div>
+
+        </section>
+
+        <!-- SEZIONE TEAM -->
+        <section class="section-3">
+            <div class="small-container">
+            <div>sezione team</div>
+            <hr>
+            <div>ciao</div>
+            <div>ciao</div>
+        </div>
+        </section>
+        <!-- /SEZIONE TEAM -->
+
+
+        <!-- SEZIONE PARTNER -->
+        <section class="section-one">
+            <div class="small-container">
+                <div class="row">
+                    <div class="col-60"><img src="./img/partner.png" alt=""></div>
+                    <div class="col-40">ciao ciao ciao ciao</div>
+
 
                 </div>
 
+
+
             </div>
+   
+
+
+
 
 
 
         </section>
+        <!-- /SEZIONE PARTNER -->
+
+
+
+        </div>
+
+
     </main>
     <!-- /MAIN -->
 
