--- a/index.html
+++ b/index.html
@@ -48,14 +48,13 @@
         <!-- SEZIONE TEAM -->
         <section class="section-3">
             <div class="small-container">
-            <div>sezione team</div>
-            <hr>
-            <div>ciao</div>
-            <div>ciao</div>
-        </div>
+                <div>sezione team</div>
+                <hr>
+                <div>ciao</div>
+                <div>ciao</div>
+            </div>
         </section>
         <!-- /SEZIONE TEAM -->
-
 
         <!-- SEZIONE PARTNER -->
         <section class="section-one">
@@ -63,29 +62,121 @@
                 <div class="row">
                     <div class="col-60"><img src="./img/partner.png" alt=""></div>
                     <div class="col-40">ciao ciao ciao ciao</div>
-
-
                 </div>
-
-
-
             </div>
-   
-
-
-
-
-
-
         </section>
         <!-- /SEZIONE PARTNER -->
 
+        <!-- SEZIONE OPERATIONS -->
+        <section class="section-2">
+            <div class="small-container">
+                <div class="padding">
+                    <h4>Esegui più operazioni con dropbox</h4>
+                </div>
+                <div class="row-2">
+                    <div class="card"><img src="./img/business-feature-coordinate-it.png" alt=""></div>
+                    <div class="card"><img src="./img/business-feature-integrations-it.png" alt=""></div>
+                    <div class="card"><img src="./img/business-feature-multi-device.png" alt=""></div>
+                    <div class="card"><img src="./img/business-feature-security.png" alt=""></div>
+                    <div class="card"><img src="./img/business-feature-send-files-it.png" alt=""></div>
+                    <div class="card"><img src="./img/business-feature-switching-tools.png" alt=""></div>
+                </div>
+            </div>
 
+            <!-- SEZIONE PRE FOOTER -->
+            <section class="section-one">
+                <div class="small-container">
+                    <div class="padding">
+                        <h3>Più di 500.000 persone utilizzano Dropbox Business</h3>
+                    </div>
+                    <p><a href="link">Scopri di più sui nostri prodotti</a></p>
+                </div>
+            <!-- /SEZIONE PRE FOOTER -->
+    </main>
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="small-container">
+            <div class="row-3">
+                <div>
+                    <ul class="padding">
+                        <li><span>DROPBOX</span></li>
+                        <li>Applicazioni Desktop</li>
+                        <li>Perchè dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                        <hr>
+                        <li>Italiano</li>
+                    </ul>
+
+                </div>
+                <ul class="padding">
+                    <li><span>DROPBOX</span></li>
+                    <li>Applicazioni Desktop</li>
+                    <li>Perchè dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+                <div>
+                    <ul class="padding">
+                        <li><span>DROPBOX</span></li>
+                        <li>Applicazioni Desktop</li>
+                        <li>Perchè dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+                <div>
+                    <ul class="padding">
+                        <li><span>DROPBOX</span></li>
+                        <li>Applicazioni Desktop</li>
+                        <li>Perchè dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+
+                </div>
+                <div>
+                    <ul class="padding">
+                        <li><span>DROPBOX</span></li>
+                        <li>Applicazioni Desktop</li>
+                        <li>Perchè dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+
+            </div>
 
         </div>
+        </section>
+    </footer>
+    <!-- /FOOTER -->
+    </section>
+
+    <!-- /SEZIONE PRE FOOTER -->
 
 
-    </main>
+
+
+
+    </section>
+
+
+
+
+
+    <!-- /SEZIONE OPERATIONS -->
+
+
+
+    </div>
+
+
     <!-- /MAIN -->
 
 
