--- a/index.html
+++ b/index.html
@@ -13,21 +13,39 @@
 <body>
     <!-- HEADER -->
     <header class="header">
-        <div class="container">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat voluptatem impedit, voluptates beatae
-            nesciunt dolorum eligendi ipsa minus sequi assumenda laboriosam quis reiciendis consectetur? Natus iste quas
-            ducimus veniam iusto.
+        <ul class="elenco-sx">
+            <li><a href="link"><img src="./img/logo-small.png" alt=""></a></li>
+            <li><a href="link">Perchè Dropbox</a></li>
+            <li><a href="link">Funzioni</a></li>
+            <li><a href="link">Piani e prezzi</a></li>
+        </ul>
+        <ul class="elenco-dx">
+            <li><a href="link">Logo</a></li>
+            <li><a href="link">Perchè Dropbox</a></li>
+            <li><a href="link">Funzioni</a></li>
+            <li><a href="link">Piani e prezzi</a></li>
+        </ul>
+        </div>
         </div>
     </header>
-    <!-- /HEADER -->
+    <!-- /HEADER OK! -->
 
     <!-- MAIN -->
     <main>
         <!-- <div class="main-container"></div> -->
         <section class="section-one">
             <div class="main-container">
-                <div class="text-square"></div>
-                <div class="photo-square"></div>
+                <div class="col-40">
+                    <p class="style">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto.
+                        Dropbox business è più di uno spazio di archiviazione sicuro:è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                    </p>
+                    <span class="btn">Inizia la tua prova gratuita</span>
+                    <p class="annulla">Annulla in qualsiasi momento</p>
+                    <p class="arrow">&DownArrow;</p>
+                </div>
+                <div class="col-60"><img class="position" src="./img/business-feature-coordinate-it.png" alt="">
+                </div>
+
             </div>
         </section>
 
@@ -35,12 +53,19 @@
         <section class="section-2">
             <div class="small-container">
                 <div>
-                    <h2>Trova il piano</h2>
+                    <h2>Trova il piano business che fa per te</h2>
+                    <div class="radio">
+                        
+                        <div><input type="radio">Fatturazione mensile</div>
+                        <div><input type="radio">Fatturazione annuale</div>
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-33">ciao</div>
-                    <div class="col-33">ciao</div>
-                    <div class="col-33">ciao</div>
+                    <div class="col-33 card-top">Singolo</div>
+
+                    <div class="col-33">Team</div>
+
+                    <div class="col-33">Azienda</div>
                 </div>
 
         </section>
@@ -57,7 +82,7 @@
         <!-- /SEZIONE TEAM -->
 
         <!-- SEZIONE PARTNER -->
-        <section class="section-one">
+        <section class="section-2">
             <div class="small-container">
                 <div class="row">
                     <div class="col-60"><img src="./img/partner.png" alt=""></div>
@@ -91,7 +116,7 @@
                     </div>
                     <p><a href="link">Scopri di più sui nostri prodotti</a></p>
                 </div>
-            <!-- /SEZIONE PRE FOOTER -->
+                <!-- /SEZIONE PRE FOOTER -->
     </main>
     <!-- FOOTER -->
     <footer class="footer">
@@ -183,7 +208,7 @@
     <!-- FOOTER -->
     <footer>
 
-
+        <span class="span">Inizia la tua prova gratuita</span>
 
     </footer>
     <!-- /FOOTER -->
