--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
         <section class="section-one">
             <div class="main-container">
                 <div class="col-40">
-                    <p class="style">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto.
-                        Dropbox business è più di uno spazio di archiviazione sicuro:è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.
+                    <p class="style">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo
+                        stesso posto.
+                        Dropbox business è più di uno spazio di archiviazione sicuro:è un modo intelligente e integrato
+                        per ottimizzare il flusso di lavoro esistente.
                     </p>
                     <span class="btn">Inizia la tua prova gratuita</span>
                     <p class="annulla">Annulla in qualsiasi momento</p>
@@ -55,7 +57,7 @@
                 <div>
                     <h2>Trova il piano business che fa per te</h2>
                     <div class="radio">
-                        
+
                         <div><input type="radio">Fatturazione mensile</div>
                         <div><input type="radio">Fatturazione annuale</div>
                     </div>
@@ -73,10 +75,10 @@
         <!-- SEZIONE TEAM -->
         <section class="section-3">
             <div class="small-container">
-                <div>sezione team</div>
+                <div class="justify">Team</div>
                 <hr>
-                <div>ciao</div>
-                <div>ciao</div>
+                <h2 class="padding">Enterprise</h2>
+                <h4>Contatta l'ufficio vendite per i prezzi</h4>
             </div>
         </section>
         <!-- /SEZIONE TEAM -->
@@ -86,7 +88,11 @@
             <div class="small-container">
                 <div class="row">
                     <div class="col-60"><img src="./img/partner.png" alt=""></div>
-                    <div class="col-40">ciao ciao ciao ciao</div>
+                    <div class="col-40">
+                        <h2>Entra in contatto con un Partner Dropbox</h2>
+                        <p class="style-2">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui</p>
+                        <span class="btn-grey">Trova un partner</span>
+                    </div>
                 </div>
             </div>
         </section>
